Renames the package into expediagroup