@@ -18,10 +18,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <name>BULL - Bean Utils Light Library</name>
-    <groupId>com.hotels.beans</groupId>
+    <groupId>com.expediagroup.beans</groupId>
     <artifactId>bean-utils-library-parent</artifactId>
-    <url>https://github.com/HotelsDotCom/bull</url>
-    <version>1.7.7</version>
+    <url>https://github.com/ExpediaGroup/bull</url>
+    <version>2.0.0-jdk11-SNAPSHOT</version>
     <packaging>pom</packaging>
     <inceptionYear>2019</inceptionYear>
     <description>
@@ -30,10 +30,11 @@
         incredibly fast. It's the only library able to transform Mutable, Immutable and Mixed bean without any custom
         configuration.
     </description>
+
     <parent>
-        <groupId>com.hotels</groupId>
-        <artifactId>hotels-oss-parent</artifactId>
-        <version>6.2.1</version>
+        <groupId>com.expediagroup</groupId>
+        <artifactId>eg-oss-parent</artifactId>
+        <version>2.3.2</version>
     </parent>
 
     <modules>
@@ -57,7 +58,7 @@
         <assertj-core.version>3.20.2</assertj-core.version>
         <!-- validation dependencies -->
         <hibernate-validator.version>7.0.1.Final</hibernate-validator.version>
-        <slf4j-api.version>1.7.31</slf4j-api.version>
+        <slf4j-api.version>1.7.32</slf4j-api.version>
         <glassfish.jakarta.el.version>4.0.1</glassfish.jakarta.el.version>
         <!-- JaCoCo & Sonar properties -->
         <jacoco.version>0.8.7</jacoco.version>
@@ -77,11 +78,16 @@
         <github.global.server>github</github.global.server>
         <maven.site.plugin.version>3.9.1</maven.site.plugin.version>
         <!-- build settings -->
+        <maven.required.version>[3.8.1,)</maven.required.version>
         <maven.gpg.plugin.version>3.0.1</maven.gpg.plugin.version>
         <maven.javadoc-plugin.version>3.3.0</maven.javadoc-plugin.version>
         <maven.checkstyle.plugin.version>3.1.2</maven.checkstyle.plugin.version>
-        <puppycrawl.checkstyle.version>8.43</puppycrawl.checkstyle.version>
-        <maven.spotless.plugin.version>2.12.1</maven.spotless.plugin.version>
+        <maven.versions.plugin.version>2.8.1</maven.versions.plugin.version>
+        <puppycrawl.checkstyle.version>8.44</puppycrawl.checkstyle.version>
+        <maven.spotless.plugin.version>2.12.2</maven.spotless.plugin.version>
+        <maven.release.plugin.version>3.0.0-M4</maven.release.plugin.version>
+        <maven.nexus-staging.plugin.version>1.6.8</maven.nexus-staging.plugin.version>
+        <maven.project.info.reports.plugin.version>3.1.2</maven.project.info.reports.plugin.version>
         <checkstyle.check.skip>false</checkstyle.check.skip>
         <!-- excludes the Record classes from being analyzed as they are not yet supported by the checkstyle plugin -->
         <checkstyle.exclusion>
@@ -94,16 +100,29 @@
         <javadoc.skip>false</javadoc.skip>
         <import.order>\#java,\#javax,\#jakarta,\#org,\#,\#com,,\#lombok,java,javax,jakarta,org,,com,,lombok
         </import.order>
-        <spotless.plugin.skip>false</spotless.plugin.skip>
+        <spotless.maven.plugin.skip>false</spotless.maven.plugin.skip>
     </properties>
 
     <!-- distribution configuration -->
     <scm>
-        <connection>scm:git:git@github.com:HotelsDotCom/bull.git</connection>
-        <developerConnection>scm:git:git@github.com:HotelsDotCom/bull.git</developerConnection>
-        <url>https://github.com/HotelsDotCom/bull</url>
-        <tag>1.7.7</tag>
+        <connection>scm:git:git@github.com:ExpediaGroup/bull.git</connection>
+        <developerConnection>scm:git:git@github.com:ExpediaGroup/bull.git</developerConnection>
+        <url>https://github.com/ExpediaGroup/bull</url>
+        <tag>HEAD</tag>
     </scm>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>oss-sonatype</id>
+            <name>Sonatype Nexus Snapshots Repository</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>oss-sonatype</id>
+            <name>Sonatype Nexus Release Repository</name>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
 
     <dependencyManagement>
         <dependencies>
@@ -194,15 +213,6 @@
 
     <!-- profile configuration -->
     <profiles>
-        <profile>
-            <id>default</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <properties>
-                <javadoc.skip>true</javadoc.skip>
-            </properties>
-        </profile>
         <!-- modules profiles -->
         <profile>
             <id>relaxed</id>
@@ -242,6 +252,7 @@
                 <checkstyle.check.skip>true</checkstyle.check.skip>
                 <checkstyle.includeTestSourceDirectory>false</checkstyle.includeTestSourceDirectory>
                 <spotless.maven.plugin.skip>true</spotless.maven.plugin.skip>
+                <test.coverage.check.skip>true</test.coverage.check.skip>
             </properties>
             <build>
                 <plugins>
@@ -253,7 +264,18 @@
                             <excludes>
                                 <exclude>**/PerformanceTest.java</exclude>
                             </excludes>
+                            <argLine>@{argLine} --enable-preview</argLine>
                         </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>com.mycila</groupId>
+                        <artifactId>license-maven-plugin</artifactId>
+                        <version>${license.maven.plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <phase>none</phase>
+                            </execution>
+                        </executions>
                     </plugin>
                 </plugins>
             </build>
@@ -262,7 +284,22 @@
             <id>compatibility-mode</id>
             <properties>
                 <javadoc.skip>true</javadoc.skip>
+                <spotless.maven.plugin.skip>true</spotless.maven.plugin.skip>
             </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.mycila</groupId>
+                        <artifactId>license-maven-plugin</artifactId>
+                        <version>${license.maven.plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <phase>none</phase>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
         <!-- release profile -->
         <profile>
@@ -287,8 +324,25 @@
                                 <goals>
                                     <goal>sign</goal>
                                 </goals>
+                                <configuration>
+                                    <gpgArguments>
+                                        <arg>--pinentry-mode</arg>
+                                        <arg>loopback</arg>
+                                    </gpgArguments>
+                                </configuration>
                             </execution>
                         </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                        <version>${maven.nexus-staging.plugin.version}</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <serverId>oss-sonatype</serverId>
+                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                        </configuration>
                     </plugin>
                     <!-- skip some test cases during the release -->
                     <plugin>
@@ -319,6 +373,16 @@
                             </execution>
                         </executions>
                     </plugin>
+                    <plugin>
+                        <groupId>com.mycila</groupId>
+                        <artifactId>license-maven-plugin</artifactId>
+                        <version>${license.maven.plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <phase>none</phase>
+                            </execution>
+                        </executions>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
@@ -331,6 +395,16 @@
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>versions-maven-plugin</artifactId>
                         <inherited>false</inherited>
+                    </plugin>
+                    <plugin>
+                        <groupId>com.mycila</groupId>
+                        <artifactId>license-maven-plugin</artifactId>
+                        <version>${license.maven.plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <phase>none</phase>
+                            </execution>
+                        </executions>
                     </plugin>
                 </plugins>
             </build>
@@ -444,9 +518,9 @@
                             <configuration>
                                 <skip>${test.coverage.check.skip}</skip>
                                 <includes>
-                                    <include>com/hotels/transformer/**</include>
-                                    <include>com/hotels/beans/**</include>
-                                    <include>com/hotels/map/**</include>
+                                    <include>com/expediagroup/transformer/**</include>
+                                    <include>com/expediagroup/beans/**</include>
+                                    <include>com/expediagroup/map/**</include>
                                 </includes>
                                 <excludes>
                                     <exclude>**/Test*.*</exclude>
@@ -696,7 +770,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <skip>${spotless.plugin.skip}</skip>
+                    <skip>${spotless.maven.plugin.skip}</skip>
                     <java>
                         <removeUnusedImports />
                         <trimTrailingWhitespace />
